package de.ronnyfriedland.adr.enums;

/**
 * Defines the available status of an adr.
 *
 * @author ronnyfriedland
 */
public enum StatusType {
    proposed, rejected, accepted, deprecated;
}
