package de.ronnyfriedland.adr.export.enums;

/**
 * Defines the available (export-) formats.
 *
 * @author ronnyfriedland
 */
public enum FormatType {
    docx, html, pdf;
}
